fix styling for dark mode, add fifth post and image

--- a/css/index.css
+++ b/css/index.css
@@ -221,7 +221,7 @@ a[href].post-tag:visited {
 }
 a[href].post-tag:hover,
 a[href].post-tag:focus {
-  background-color: var(--color-gray-20);
+  background-color: var(--text-color-link-hover);
 }
 .postlist-item > .post-tag {
   align-self: center;
